# sqlmemo

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml
sqlcache/: __init__.py  cached_function.py  schema.py  serialize.py  test.py
sqlmemo/: memoize.py  schema.py  sqlmemo.py
tests/: create_test_data.py  test_cached_function.py  test_serialize.py  test_sqlcache.py  test_sqlmemo.py
tests/data/: test_data_dill.sqlite  test_data_json.sqlite  test_data_plain.sqlite
