[tool.poetry]
name = "sqlmemo"
version = "0.2.0"
description = ""
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
dill = { version = "^0.3.9", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
